--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -9,6 +9,7 @@
     
     <br>
     <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errorMessage.ejs') %>
     <%- body %>
     <br>
     
