--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,7 @@
     <nav>
         <a href="/">Amos_lib</a>
         <ul>
+            <li><a href="/register">Register</a></li>
             <li><a href="/authors">Authors</a></li>
             <li><a href="/authors/new">Add Authors</a></li>
 
